HHH-13020 - When proxying an entity having a private default constructor, the log message is not very clear about the problem